log
Fri 12 May 2023 12:32:06 PM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
7440e0c
Fri 12 May 2023 12:32:21 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0eb1aa6
Fri 12 May 2023 12:32:56 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4b3c441
Fri 12 May 2023 12:33:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
44303f0
Fri 12 May 2023 12:36:15 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:10: error: unused variable ‘aTop’ [-Werror=unused-variable]
   22 |   Heap * aTop = pq->heapArray->data;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
f41dbcd
Fri 12 May 2023 12:36:32 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c546d4c
Fri 12 May 2023 12:37:27 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
3363ed0
Fri 12 May 2023 12:41:31 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:25:26: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   25 |   return pq->heapArray[0]->data;
      |                          ^~
heap.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
   26 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
860804e
Fri 12 May 2023 12:41:42 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
74c4cda
Fri 12 May 2023 12:43:17 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
17192c6
Fri 12 May 2023 12:43:51 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
391bba8
Fri 12 May 2023 12:44:02 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b12f316
Fri 12 May 2023 12:45:13 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
7c30e19
Fri 12 May 2023 12:46:44 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
1495869
